# GOCART

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE.md  README.md  components.yaml
ESMF/Apps/: AerosolDriver.F90  AerosolMain.F90  CMakeLists.txt  ErrLog.h  GOCART2G_AopMod.F90  GOCART2G_SimpleBundleMod.F90  MaplNuopcDriver.F90  MaplNuopcMain.F90  MaplProvide_GridComp.F90  MaplRecieve_GridComp.F90  Mediator.F90  MediatorDriver.F90  MediatorMain.F90  Mediator_Interpolator.F90  Provider_GridComp.F90  Reciever_GridComp.F90  SyntheticApp.F90  Synthetic_Driver.F90  UFS_TestingCap.F90  aop_calculator.F90  aop_calculator.py  aop_calculator.rc  atm.F90  esm.F90  esmApp.F90  ocn.F90
ESMF/Apps/Old/: Mediator.F90
ESMF/Apps/experiment/: AEROSOL_CAP.rc  AGCM_ExtData.rc  CTM_GridComp.rc  CTM_HISTORY.rc  GEOSCTM.rc  NUOPC_run_config.txt  PROVIDER_CAP.rc  RECIEVER_CAP.rc  cap_restart.orig  fvcore_layout.rc  logging.yaml
ESMF/Apps/synthetic_nuopc/: AGCM.rc  CAP.rc  HISTORY.rc  NUOPC_run_config.txt  cap_restart
ESMF/GOCART2G_GridComp/: CMakeLists.txt  GOCART2G_GridComp.rc  GOCART2G_GridComp.yaml  GOCART2G_GridCompMod.F90  GOCART2G_StateSpecs.rc  createReplenishAlarm.h  gocart.yaml
ESMF/GOCART2G_GridComp/CA2G_GridComp/: CA2G_GridCompMod.F90  CA2G_GridComp_CA.bc.rc  CA2G_GridComp_CA.br.rc  CA2G_GridComp_CA.oc.rc  CA2G_GridComp_ExtData.rc  CA2G_GridComp_ExtData.yaml  CA2G_StateSpecs.rc  CA2G_instance_CA.bc.rc  CA2G_instance_CA.br.rc  CA2G_instance_CA.oc.rc  CMakeLists.txt
ESMF/GOCART2G_GridComp/DU2G_GridComp/: CMakeLists.txt  DU2G_GridCompMod.F90  DU2G_GridComp_DU.data.rc  DU2G_GridComp_DU.rc  DU2G_GridComp_ExtData.rc  DU2G_GridComp_ExtData.yaml  DU2G_Registry.rc  DU2G_StateSpecs.rc  DU2G_instance_DU.rc  DU2G_instance_DU.yaml
ESMF/GOCART2G_GridComp/GA_Environment/: CMakeLists.txt  GA_EnvironmentMod.F90
ESMF/GOCART2G_GridComp/GA_GridComp/: CMakeLists.txt  GA_GridComp.F90~  GA_GridCompMod.F90
ESMF/GOCART2G_GridComp/NI2G_GridComp/: CMakeLists.txt  NI2G_GridCompMod.F90  NI2G_GridCompMod.F90-NEW  NI2G_GridComp_ExtData.rc  NI2G_GridComp_ExtData.yaml  NI2G_GridComp_NI.rc  NI2G_StateSpecs.rc  NI2G_instance_NI.rc  new_NI2G_GridCompMod.F90  new_NI2G_StateSpecs.rc
ESMF/GOCART2G_GridComp/SS2G_GridComp/: .SS2G_StateSpecs.rc.swp  CMakeLists.txt  SS2G_GridCompMod.F90  SS2G_GridComp_ExtData.rc  SS2G_GridComp_ExtData.yaml  SS2G_GridComp_SS.data.rc  SS2G_GridComp_SS.rc  SS2G_StateSpecs.rc  SS2G_instance_SS.rc  SS2G_instance_SS.yaml  seasalt.yaml
ESMF/GOCART2G_GridComp/SU2G_GridComp/: CMakeLists.txt  SU2G_GridCompMod.F90  SU2G_GridCompMod.F90-NEW  SU2G_GridComp_ExtData.rc  SU2G_GridComp_ExtData.yaml  SU2G_GridComp_SU.rc  SU2G_StateSpecs.rc  SU2G_instance_SU.rc
ESMF/GOCART_GridComp/: Aero_GridCompMod.F90  CMakeLists.txt  GOCART_GridCompMod.F90  GOCART_StubCompMod.F90  GOCARTdata_AerRegistry.rc  GOCARTdata_ExtData.rc  ut_GOCART.F90
ESMF/GOCART_GridComp/BC_GridComp/: BC_GridCompMod.F90  BC_GridComp_ExtData.rc  BC_Registry.rc
ESMF/GOCART_GridComp/BRC_GridComp/: BRC_GridComp---full.rc  BRC_GridCompMod.F90  BRC_GridComp_ExtData.rc  BRC_Registry.rc  CMakeLists.txt
ESMF/GOCART_GridComp/CFC_GridComp/: CFC_GridCompMod.F90  CFC_Registry.rc  CMakeLists.txt
ESMF/GOCART_GridComp/CH4_GridComp/: CH4_GridComp---agw.rc  CH4_GridComp---animls.rc  CH4_GridComp---bb.rc  CH4_GridComp---full.rc  CH4_GridComp.rc  CH4_GridCompMod.F90  CH4_GridComp_ExtData.rc  CH4_GridComp_ExtData.rc.SOURISH  CH4_GridComp_ExtData.yaml  CH4_History___.rc  CH4_Registry.rc  CMakeLists.txt
ESMF/GOCART_GridComp/CO2_GridComp/: CMakeLists.txt  CO2_GridComp.rc  CO2_GridCompMod.F90  CO2_GridComp_ExtData.rc  CO2_GridComp_ExtData.yaml  CO2_Registry.rc
ESMF/GOCART_GridComp/CO_GridComp/: CMakeLists.txt  CO_GridComp---ffru.rc  CO_GridComp---sim.rc  CO_GridComp.rc  CO_GridCompMod.F90  CO_GridComp_ExtData.rc  CO_GridComp_ExtData.yaml  CO_Registry.rc
ESMF/GOCART_GridComp/DU_GridComp/: CMakeLists.txt  DU_GridComp---full.rc  DU_GridCompMod.F90  DU_GridComp_ExtData.rc  DU_Registry.rc
ESMF/GOCART_GridComp/NI_GridComp/: .NI_GridCompMod.F90.swp  NI_GridCompMod.F90  NI_GridComp_ExtData.rc  NI_Registry.rc
ESMF/GOCART_GridComp/O3_GridComp/: CMakeLists.txt  O3_GridComp.rc  O3_GridCompMod.F90  O3_Registry.rc
ESMF/GOCART_GridComp/OC_GridComp/: OC_GridComp---bbnb.rc  OC_GridComp---full.rc  OC_GridCompMod.F90  OC_GridComp_ExtData.rc  OC_Registry.rc
GOCART2G_GridComp/: CMakeLists.txt
GOCART2G_GridComp/BCng_GridComp/: BCng_Registry.rc  CMakeLists.txt
GOCART2G_GridComp/DU2G_GridComp/: DU2G_GridComp_DU.rc
GOCART2G_GridComp/OCng_GridComp/: CMakeLists.txt
GOCART2G_GridComp/SS2G_GridComp/: SS2G_GridCompMod.F90
GOCART2G_GridComp/SUng_GridComp/: CMakeLists.txt  SU_GridComp_SU.data.rc  SUng_GridCompMod.F90  SUng_Registry.rc
GOCART_Shared/Chem_Shared/: Bundle_IncrementMod.F90  CMakeLists.txt  DustEmissionMod.F90  SulfateChemDriverMod.F90  WetRemovalMod.F90  gmi_drydep_data.h  gmi_time_constants.h  ut_diurnal.F90
Process_Library/: .GOCART2G_Process.F90.swp  Aero_Compute_Diags.F90  CAEmission.F90  CMakeLists.txt  Chem_BiomassDiurnal.F90  Chem_Mie2GMod.F90  Chem_MieTableMod2G.F90  Chem_Settling.F90  Chem_Settling2Gorig.F90  Chem_SettlingSimple.F90  Chem_SettlingSimpleOrig.F90  Chem_UtilCdow.F90  Chem_UtilIdow.F90  Chem_UtilResVal.F90  DMSemission.F90  DistributePointEmission.F90  DryDeposition.F90  DustAerosolDistributionKok.F90  DustEmissionFENGSHA.F90  DustEmissionGOCART.F90  DustEmissionGOCART2G.F90  DustEmissionK14.F90  DustEmissionsMod.F90  DustFluxV2HRatioMB95.F90  EmissionReaderMod.F90  GOCART2G_MieMod.F90  GOCART2G_Process.F90  MieQuery.H  MieQuery_xd.H  NIheterogenousChem.F90  NIthermo.F90  PointEmissionGOCART.F90  Process.H  Query.H  QueryVectorRT_xd.H  ReadPointEmissions.F90  SU_Compute_Diags.F90  SU_Wet_Removal.F90  SUvolcanicEmissions.F90  SeasaltEmission.F90  (+18 more)
Process_Library/Chem_Shared2G/: Chem_AeroGeneric.F90  Chem_MieTableMod2G.F90  GOCART2G_Process.F90
Process_Library/tests/: CMakeLists.txt  test_DustEmissionGOCART.pf  test_DustEmissions.pf  test_GOCART2G_Process.pf  test_PointEmissionGOCART.pf
(+581 files in other folders)
